--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,12 +6,85 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+
     <ImageView
         android:id="@+id/rec"
-        android:contentDescription="@string/design"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:contentDescription="@string/design"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.555"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_rectangle_37" />
+
+    <ImageView
+        android:id="@+id/recdown"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="36dp"
+        android:contentDescription="@string/totalCredit"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/ic_rectangle_37" />
+        app:layout_constraintTop_toBottomOf="@+id/rec"
+        app:srcCompat="@drawable/ic_rectangle_39" />
+
+    <TextView
+        android:id="@+id/tranzaction"
+        android:layout_width="214dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="56dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="58dp"
+        android:text="Text"
+        android:textSize="11sp"
+        android:gravity="center"
+        android:textColor="@color/black"
+        app:layout_constraintEnd_toEndOf="@+id/rec"
+        app:layout_constraintStart_toStartOf="@+id/rec"
+        app:layout_constraintTop_toTopOf="parent" />
+
+
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/category"
+        android:layout_width="250dp"
+        android:layout_height="250dp"
+        android:layout_marginTop="20dp"
+        android:verticalScrollbarPosition="left"
+        app:layout_constraintEnd_toEndOf="@+id/recdown"
+        app:layout_constraintStart_toStartOf="@+id/recdown"
+        app:layout_constraintTop_toBottomOf="@+id/editSeach" />
+
+    <EditText
+        android:id="@+id/editSeach"
+        android:layout_width="230dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="52dp"
+        android:autofillHints="name"
+        android:ems="10"
+        android:hint="seach"
+        android:inputType="textPersonName"
+        android:textColor="@color/white"
+        android:textColorHint="@color/teal_200"
+        android:textSize="12sp"
+        app:layout_constraintEnd_toEndOf="@+id/recdown"
+        app:layout_constraintHorizontal_bias="0.503"
+        app:layout_constraintStart_toStartOf="@+id/recdown"
+        app:layout_constraintTop_toTopOf="@+id/recdown" />
+
+    <TextView
+        android:id="@+id/totalDebet"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:text="@string/totalDebet"
+        android:textSize="20sp"
+        android:textColor="@color/teal_200"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/rec"
+        app:layout_constraintTop_toBottomOf="@+id/tranzaction" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
